--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- Created By CodingNepal - www.codingnepalweb.com -->
-<html lang="en" dir="ltr">
+<html lang="fr" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!------<title> Website Layout | CodingLab</title>------>
+    <!------<title> Titre de mon site web </title>------>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
    </head>
@@ -12,24 +12,23 @@
   <nav>
     <div class="menu">
       <div class="logo">
-        <a href="#">CodingLab</a>
+        <a href="#">Webdeveloppeuse</a>
       </div>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">A propos</a></li>
         <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Feedback</a></li>
+        <li><a href="#">Mon portfolio</a></li>
+        <li><a href="#">Contactez-moi</a></li>
       </ul>
     </div>
   </nav>
   <div class="img"></div>
   <div class="center">
-    <div class="title">Create Amazing Website</div>
-    <div class="sub_title">Pure HTML & CSS Only</div>
+    <div class="title">Bienvenue sur mon site web</div>
+    <div class="sub_title">Crée avec du HTML et du CSS</div>
     <div class="btns">
-      <button>Learn More</button>
-      <button>Subscribe</button>
+      <button>Entrer</button>
     </div>
   </div>
 </body>
